fix: fix navbar taking too much space. Improved text.

--- a/src/app.css
+++ b/src/app.css
@@ -65,8 +65,8 @@ time, mark, audio, video {
         --size-text-subtitle: 1.3rem;
         --size-text-part: 1.2rem;
         --size-text-tag: 1rem;
-        --size-text-smalltext: 0.8em;
-        --size-text-smallesttext: 0.6em;
+        --size-text-smalltext: 1.1rem;
+        --size-text-smallesttext: 1rem;
         --title-line-height: 1;
         --size-section-gap: 10rem;
         --size-header-top: 12rem;
@@ -76,13 +76,13 @@ time, mark, audio, video {
 
 @media (max-width: 768px) {
     :root {
-        --size-text-title: 2rem;
+        --size-text-title: 2.5rem;
         --size-text-subtitle: 1.2rem;
         --size-text-part: 1.2rem;
-        --size-text-tag: 0.8em;
+        --size-text-tag: 0.8rem;
         --size-icon: 10px;
-        --size-text-smalltext: 0.9em;
-        --size-text-smallesttext: 0.8em;
+        --size-text-smalltext: 1rem;
+        --size-text-smallesttext: 0.9rem;
         --title-line-height: 1;
         --size-section-gap: 8rem;
         --size-header-top: 8rem;
@@ -120,8 +120,8 @@ p {
 }
 
 header {
-    margin-top: var(--size-header-top);
     margin-bottom: var(--size-header-top);
+    margin-top: var(--size-section-gap);
 }
 
 a {
@@ -172,7 +172,6 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: var(--size-section-gap);
 }
 
 .align-horizontal {
